# spc2midi-tsuu

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: center_note_estimation.rs  cli.rs  device_setting_window.rs  lib.rs  main.rs  main_window.rs  midi_output_configuration_window.rs  preference_window.rs  program.rs  source_estimation.rs  srn_ch_routing_window.rs  srn_window.rs  types.rs
tests/data/: README.md
tests/data/forest_album_230125_spc_supermidipak/: 01_forest.spc  02_orphee.spc  03_cowctry_voice.spc  04_long_road.spc  05_village_under_the_lake.spc  06_north_plain.spc  07_time_not_to_return.spc  08_Recuerdos_de_la_Alhambra.spc  09_forest_momone.spc  10_hana_sumida_river.spc  readme.txt
