[package]
name = "spc2midi-tsuu"
version = "0.1.58"
edition = "2024"

[dependencies]
cpal = "0.17.0"
czt = "0.3.7"
fixed-resample = "0.9.2"
iced = { version = "0.14.0", features = ["tokio", "image"] }
iced_aw = { version = "0.13.0", features = ["full"] }
iced_widget = "0.14.2"
midir = "0.10.3"
num-traits = "0.2.19"
rfd = "0.17.1"
rimd = "0.0.1"
samplerate = "0.2.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spc700 = { git = "https://github.com/aikiriao/spc700.git" }

[build-dependencies]
winresource = "0.1.30"
